# core-2024-11-03

./: README.md  main.py  pyproject.toml  starship.pkl
app/: main.py
app/app_classes_module/: __init__.py  user.py
app/functions/: saving_functions.py
app_classes_module/: __init__.py  starship_center.py  startship.py
